adding Products&Cart

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-page="/Clients/Index">Clients</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-page="/Products/Index">Products</a>
+                        </li>
+                        <
                     </ul>
+                    <a class="btn btn-outline-success my-2 my-sm-0 text-white" asp-area="" asp-page="/Purchase/Index">🛒</a>
                 </div>
             </div>
         </nav>
